[tool.poetry]
name = "petfriends"
version = "0.1.0"
description = ""
authors = ["AribetAoki <slavovna88@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
pytest = "^7.4.2"
self = "^2020.12.3"
requests-toolbelt = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
